--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
 
         </div>
 
-        <nav class="large-only">
-          <ul class="gnb"> <!-- large-only -->
-            <li><a href="">HOME</a></li>
-            <li><a href="">ABOUT</a></li>
-            <li><a href="">SKILL</a></li>
-            <li><a href="">PORTFOLIO</a></li>
+        <!-- <nav class="large-only"> -->
+          <ul id="gnb" class="large-only"> <!-- large-only -->
+            <li><a href="#home">HOME</a></li>
+            <li><a href="#about">ABOUT</a></li>
+            <li><a href="#skill">SKILL</a></li>
+            <li><a href="#portfolio">PORTFOLIO</a></li>
           </ul>
-        </nav>
+        <!-- </nav> -->
 
         <div class="mobile-only">
           <div class="ham-icon" onclick="openMobileNav()">
@@ -85,8 +85,7 @@
 
           <div id="textFlip">
             <div class="text-wrap">
-                <!-- <div class="current">😊</div> -->
-                <div class="current">짱</div>
+                <div class="current">😊</div>
                 <div class="next">성실한</div>
                 <div>책임감 있는</div>
                 <div class="prev">긍정적인</div>
@@ -107,14 +106,14 @@
             <div class="flexbox">
               <div class="me-emoticon flip">
                 <img class="front" src="./images/me-emoticon.png" alt="">
-                <div class="me-circle back">
+                <div class="back me-circle">
                   010-5113-5826 <br>
                   applej07@naver.com
                 </div>
               </div> 
   
               <div class="me-introduce">
-                <div>안녕하세요, <strong>웹 개발자 송하정</strong>입니다.</div>
+                <div>안녕하세요, <strong>안녕하세요</strong>입니다.</div>
                 <div>소개하기1문단</div>
                 <div>소개하기2문단</div>
               </div>
