--- a/index.html
+++ b/index.html
@@ -27,27 +27,28 @@
 
           <div class="cloud-animation cloud-animation1">
             <div class="cloud-wrap">
-              <div class="cloud cloud1"><img src="./images/cloud1.png" alt=""></div>
-              <div class="cloud cloud1"><img src="./images/cloud1.png" alt=""></div>
+              <div class="cloud cloud1 first"><img src="./images/cloud1.png" alt=""></div>
+              <!-- <div class="cloud cloud1 second"><img src="./images/cloud1.png" alt=""></div>
+              <div class="cloud cloud1 last"><img src="./images/cloud1.png" alt=""></div> -->
             </div>
           </div>
           <div class="cloud-animation cloud-animation2">
             <div class="cloud-wrap">
-              <div class="cloud cloud2"><img src="./images/cloud2.png" alt=""></div>
-              <div class="cloud cloud1"><img src="./images/cloud2.png" alt=""></div>
+              <div class="cloud cloud2 first"><img src="./images/cloud2.png" alt=""></div>
+              <!-- <div class="cloud cloud2 last"><img src="./images/cloud2.png" alt=""></div> -->
             </div>
           </div>
           <div class="cloud-animation cloud-animation3">
             <div class="cloud-wrap">
               <div class="cloud cloud3"><img src="./images/cloud3.png" alt=""></div>
-              <div class="cloud cloud1"><img src="./images/cloud3.png" alt=""></div>
+              <!-- <div class="cloud cloud3"><img src="./images/cloud3.png" alt=""></div> -->
             </div>
           </div>
         </div>
 
         <nav class="large-only">
           <ul id="gnb"> <!-- large-only -->
-            <li><a href="#home" class="selected">HOME</a></li>
+            <li><a href="./index.html" class="selected">HOME</a></li>
             <li><a href="#about">ABOUT</a></li>
             <li><a href="#skill">SKILL</a></li>
             <li><a href="#portfolio">PORTFOLIO</a></li>
@@ -64,7 +65,7 @@
           <div id="mobileNav" class="mobile-nav-wrap">
             <div class="closebtn" onclick="closeMobileNav()"></div>
             <ul class="mobile-nav">
-              <li><a href="#home">HOME</a></li>
+              <li><a href="./index.html">HOME</a></li>
               <li><a href="#about">ABOUT</a></li>
               <li><a href="#skill">SKILL</a></li>
               <li><a href="#portfolio">PORTFOLIO</a></li>
@@ -153,6 +154,13 @@
           <div class="container desktop-only">
             <div class="track">
               <img src="./images/track2.png" alt="">
+
+              <!-- <svg viewBox="0 0 800 500" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" id="blobSvg">
+                <g transform="translate(147.79140377044678, -0.1313629150390625)">
+                  <path class="blob" d="M482.5,288.5Q487,327,468,361Q449,395,420,419.5Q391,444,357,459.5Q323,475,286.5,477Q250,479,212.5,479Q175,479,140,464Q105,449,79,421Q53,393,39.5,358Q26,323,17.5,286.5Q9,250,16,213Q23,176,43,145Q63,114,86,85Q109,56,144.5,46Q180,36,215,26Q250,16,286,22.5Q322,29,357,42Q392,55,420.5,80Q449,105,460,141.5Q471,178,474.5,214Q478,250,482.5,288.5Z" fill="none" stroke-width="4px" stroke="#ff6464"></path>
+                </g>
+              </svg> -->
+
             </div>
           </div> <!-- container -->
 
@@ -172,7 +180,7 @@
                   </div>
                 </div> <!-- flexbox -->
               </div> <!-- html -->
-  
+
               <div class="css info-box info-box2">
                 <div class="flexbox">
                   <div class="icon-box">
@@ -279,6 +287,8 @@
             </div> <!-- skill-info -->
           </div> <!-- container -->
         </div> <!-- skill-bg -->
+
+
 
         <div class="container">
           <div class="skill-circle desktop-only">
