topbtn구현중, trackanimation구현중

--- a/index.html
+++ b/index.html
@@ -295,8 +295,8 @@
             <div class="circle cir-html">Html</div>
             <div class="circle cir-css">Css</div>
             <div class="circle cir-sass">Sass</div>
-            <div class="circle cir-bootstrap">Bootstrap</div>
-            <div class="circle cir-javascript">Javascript</div>
+            <div class="circle cir-bootstrap">B</div>
+            <div class="circle cir-javascript">Js</div>
             <div class="circle cir-jquery">jQuery</div>
             <div class="circle cir-react">React</div>
             <div class="circle cir-photoshop">Ps</div>
