topbtn구현중, trackanimation구현중

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
           <div class="pofol-box pofol-box2 right">
             <div class="flexbox">
               <div class="pofol-thumbnail">
-                <img src="images/safariMockup2.png" alt="">
+                <img src="images/bluesquare.png" alt="">
               </div>
               <div class="pofol-info">
                 <div>02</div>
