--- a/index.html
+++ b/index.html
@@ -74,18 +74,18 @@
         </div> <!-- mobile-only -->
 
         <div class="intro-flip-wrap">
-          <h2>안녕하세요,</h2>
+          <!-- <h2>안녕하세요,</h2> -->
 
           <div id="textFlip">
             <div class="text-wrap">
-                <div class="current">😊</div>
+                <!-- <div class="current">😊</div>
                 <div class="next">성실한</div>
                 <div>책임감 있는</div>
-                <div class="prev">긍정적인</div>
+                <div class="prev">긍정적인</div> -->
             </div>
           </div> <!-- textFlip -->
 
-          <h2>ㅇㅇㅇ 입니다.</h2>
+          <!-- <h2>ㅇㅇㅇ 입니다.</h2> -->
 
         </div> <!-- intro-flip-wrap -->
       </section> <!-- home -->
@@ -98,7 +98,7 @@
           <div class="about-me">
             <div class="flexbox">
               <div class="me-emoticon flip">
-                <img class="front" src="./images/me-emoticon.png" alt="">
+                <!-- <img class="front" src="./images/me-emoticon.png" alt=""> -->
                 <div class="back me-circle">
                   010-5113-5826 <br>
                   applej07@naver.com
@@ -189,7 +189,7 @@
                   </div>
                   <div class="skill-des">
                     반응형 웹 제작이 가능하며,
-                    flex속성의 이해와 응용을 통해
+                    flex, grid, float 속성의 이해를 통해
                     다양한 레이아웃을 구현합니다. 
                   </div>
                 </div> <!-- flexbox -->
@@ -202,9 +202,7 @@
                     <div class="skill-name">Sass</div>
                   </div>
                   <div class="skill-des">
-                    반응형 웹 제작이 가능하며,
-                    flex속성의 이해와 응용을 통해
-                    다양한 레이아웃을 구현합니다. 
+                    자주 사용하는 속성들을 mixin에 만든 후 include하여 사용합니다.
                   </div>
                 </div> <!-- flexbox -->
               </div> <!-- sass -->
@@ -241,8 +239,7 @@
                     <div class="skill-name">jQuery</div>
                   </div>
                   <div class="skill-des">
-                    제이쿼리의 다양한 선택자를 용도에 맞게
-                    선택하여 사용합니다.  
+                  스크롤 이벤트, 이미지 슬라이드, 탭메뉴를 구현할 수 있습니다.
                   </div>
                 </div> <!-- flexbox -->
               </div> <!-- jquery -->
@@ -404,7 +401,7 @@
             <a href=""><img src="./images/git.png" alt=""></a>
           </div>
           <div class="topbtn">
-            <a href="#home">
+            <a href="#">
               <img src="./images/topbtnBlue.png" alt="맨 위로 올라가는 버튼">
             </a>
           </div> <!-- topbtn -->
