--- a/index.html
+++ b/index.html
@@ -285,8 +285,6 @@
           </div> <!-- container -->
         </div> <!-- skill-bg -->
 
-
-
         <div class="container">
           <div class="skill-circle desktop-only">
             <div class="circle cir-html">Html</div>
@@ -396,7 +394,7 @@
       <div class="footer-bg">
         <div class="container contact">
           <div>감사합니다! 궁금한 내용이 있다면 연락 주세요.</div>
-          <address>applej07@naver.com</address>
+          <a href="mailto:applej07@naver.com">applej07@naver.com</a>
           <div class="git">
             <a href=""><img src="./images/git.png" alt=""></a>
           </div>
