mobile-gnb위치수정완료-active구현중

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <div id="mobileNav" class="mobile-nav-wrap">
             <div class="closebtn" onclick="closeMobileNav()"></div>
             <ul class="mobile-nav">
-              <li><a href="./index.html">HOME</a></li>
+              <li><a href="#home" class="active">HOME</a></li>
               <li><a href="#about">ABOUT</a></li>
               <li><a href="#skill">SKILL</a></li>
               <li><a href="#portfolio">PORTFOLIO</a></li>
@@ -74,18 +74,18 @@
         </div> <!-- mobile-only -->
 
         <div class="intro-flip-wrap">
-          <!-- <h2>안녕하세요,</h2> -->
+          <h2>안녕하세요,</h2>
 
           <div id="textFlip">
             <div class="text-wrap">
-                <!-- <div class="current">😊</div>
+                <div class="current">😊</div>
                 <div class="next">성실한</div>
                 <div>책임감 있는</div>
-                <div class="prev">긍정적인</div> -->
+                <div class="prev">긍정적인</div>
             </div>
           </div> <!-- textFlip -->
 
-          <!-- <h2>ㅇㅇㅇ 입니다.</h2> -->
+          <h2>ㅇㅇㅇ 입니다.</h2>
 
         </div> <!-- intro-flip-wrap -->
       </section> <!-- home -->
@@ -98,7 +98,7 @@
           <div class="about-me">
             <div class="flexbox">
               <div class="me-emoticon flip">
-                <!-- <img class="front" src="./images/me-emoticon.png" alt=""> -->
+                <img class="front" src="./images/me-emoticon.png" alt="">
                 <div class="back me-circle">
                   010-5113-5826 <br>
                   applej07@naver.com
@@ -106,9 +106,12 @@
               </div> 
   
               <div class="me-introduce">
-                <div>안녕하세요, <strong>안녕하세요</strong>입니다.</div>
-                <div>소개하기1문단</div>
-                <div>소개하기2문단</div>
+                <!-- <div>안녕하세요, <strong>안녕하세요</strong>입니다.</div> -->
+                <!-- <div>안녕하세요, 끈기를 바탕으로 문제 상황을 해결하는 준비된 인재입니다. </div>
+                <div>잘 해야 재미있고, 재미를 느끼면 더욱 열심히 하게 됩니다. 저는 매일 2시간씩 자바스크립트 개념과 예제를 복습하며, 자바스크립트의 어려움 극복해가는 재미를 느끼고 있습니다.</div> -->
+                <br>
+                <!-- <div>자바스크립트의 기초를 튼튼히 다지고 리액트와 타입스크립트를 공부하여 3년차에는 프론트엔드 개발자가 되는 것이 목표입니다.</div> -->
+                
               </div>
             </div> <!-- flexbox -->
           </div> <!-- about-me -->
@@ -154,13 +157,6 @@
           <div class="container desktop-only">
             <div class="track">
               <img src="./images/track2.png" alt="">
-
-              <!-- <svg viewBox="0 0 800 500" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" id="blobSvg">
-                <g transform="translate(147.79140377044678, -0.1313629150390625)">
-                  <path class="blob" d="M482.5,288.5Q487,327,468,361Q449,395,420,419.5Q391,444,357,459.5Q323,475,286.5,477Q250,479,212.5,479Q175,479,140,464Q105,449,79,421Q53,393,39.5,358Q26,323,17.5,286.5Q9,250,16,213Q23,176,43,145Q63,114,86,85Q109,56,144.5,46Q180,36,215,26Q250,16,286,22.5Q322,29,357,42Q392,55,420.5,80Q449,105,460,141.5Q471,178,474.5,214Q478,250,482.5,288.5Z" fill="none" stroke-width="4px" stroke="#ff6464"></path>
-                </g>
-              </svg> -->
-
             </div>
           </div> <!-- container -->
 
@@ -227,7 +223,7 @@
                     <div class="skill-name">Javascript</div>
                   </div>
                   <div class="skill-des">
-                    자바스크립트
+                    조건문, 반복문의 사용/ 이벤트 적용/ 배열 메소드 사용
                   </div>
                 </div> <!-- flexbox -->
               </div> <!-- javascript -->
@@ -264,7 +260,7 @@
                     <div class="skill-name">Photoshop</div>
                   </div>
                   <div class="skill-des">
-                    이미지를 편집하고 보정할 수 있고 펜툴을 사용하여 이미지의 배경을 제거할 수 있습니다.
+                    포토샵의 다양한 기능을 사용하여 이미지를 편집할 수 있으며, 와이어프레임 제작이 가능합니다.
                   </div>
                 </div> <!-- flexbox -->
               </div> <!-- photoshop -->
