--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <nav class="large-only">
           <ul id="gnb"> <!-- large-only -->
-            <li><a href="./index.html" class="selected">HOME</a></li>
+            <li><a href="#home" class="selected">HOME</a></li>
             <li><a href="#about">ABOUT</a></li>
             <li><a href="#skill">SKILL</a></li>
             <li><a href="#portfolio">PORTFOLIO</a></li>
@@ -85,7 +85,7 @@
             </div>
           </div> <!-- textFlip -->
 
-          <h2>ㅇㅇㅇ 입니다.</h2>
+          <h2>송하정 입니다.</h2>
 
         </div> <!-- intro-flip-wrap -->
       </section> <!-- home -->
@@ -106,12 +106,13 @@
               </div> 
   
               <div class="me-introduce">
-                <!-- <div>안녕하세요, <strong>안녕하세요</strong>입니다.</div> -->
-                <!-- <div>안녕하세요, 끈기를 바탕으로 문제 상황을 해결하는 준비된 인재입니다. </div>
-                <div>잘 해야 재미있고, 재미를 느끼면 더욱 열심히 하게 됩니다. 저는 매일 2시간씩 자바스크립트 개념과 예제를 복습하며, 자바스크립트의 어려움 극복해가는 재미를 느끼고 있습니다.</div> -->
+                <div>안녕하세요, <strong>웹 개발자 송하정</strong>입니다.</div>
                 <br>
-                <!-- <div>자바스크립트의 기초를 튼튼히 다지고 리액트와 타입스크립트를 공부하여 3년차에는 프론트엔드 개발자가 되는 것이 목표입니다.</div> -->
-                
+                <div>저는 끈기를 바탕으로 문제 상황을 해결하는 준비된 인재입니다.</div>
+                <br>
+                <div>잘 해야 재미있고, 재미를 느끼면 더욱 열심히 하게 됩니다. 저는 매일 2시간씩 자바스크립트 개념과 예제를 복습하며, 자바스크립트의 어려움 극복해가는 재미를 느끼고 있습니다.</div>
+                <br>
+                <div>자바스크립트의 기초를 튼튼히 다지고 리액트와 타입스크립트를 공부하여 3년차에는 프론트엔드 개발자가 되는 것이 목표입니다.</div>
               </div>
             </div> <!-- flexbox -->
           </div> <!-- about-me -->
@@ -119,9 +120,7 @@
           <div class="about-work">
             <div class="flexbox">
               <div class="about-work-title">
-                  일을 할 때<br>
-                  중요하게<br>
-                  생각하는 것은
+                  일을 할 때 <br> 중요하게 <br> 생각하는 것은
               </div>
               <div class="about-work-content">
                 <div class="about-work1">
@@ -312,11 +311,11 @@
                 <div>01</div>
                 <div class="pofol-title">민음사</div>
                 <div class="pofol-des">
-                  홈페이지 리뉴얼을 주제로 작업한 개인 프로젝트입니다.
+                  홈페이지 리뉴얼을 주제로 작업한 개인 프로젝트입니다. 신간과 베스트셀러를 소개하고 민음사의 자체 콘텐츠를 소개합니다.
                 </div>
                 <div class="modal-btn">
                   <button>디자인 가이드</button>
-                  <button>자세히 보기</button>
+                  <button><a href="https://github.com/song-tiigger/minumsa" target="_blank">페이지 보기</a></button>
                 </div>
               </div> <!-- pofol-info -->
             </div> <!-- flexbox -->
@@ -333,11 +332,12 @@
                 <div class="pofol-des">
                   반응형으로 제작한 리뉴얼 웹사이트 입니다.
                   조별 프로젝트로 진행된 작업이며,
-                  홈페이지의 메뉴에서 <strong>대관안내, 좌석배치도, 문화공간</strong> 페이지를 맡아서 제작했습니다.
+                  홈페이지의 서브메뉴에서 <strong>대관안내, 좌석배치도, 문화공간</strong> 페이지를 맡아서 제작했습니다.
                 </div>
                 <div class="modal-btn">
                   <button>디자인 가이드</button>
-                  <button>자세히 보기</button>
+                  <button><a href="https://github.com/song-tiigger/minumsa" target="_blank">페이지 보기</a></button>
+
                 </div>
               </div> <!-- pofol-info -->
             </div> <!-- flexbox -->
@@ -357,7 +357,8 @@
                 </div>
                 <div class="modal-btn">
                   <button>디자인 가이드</button>
-                  <button>자세히 보기</button>
+                  <button><a href="https://github.com/song-tiigger/minumsa" target="_blank">페이지 보기</a></button>
+
                 </div>
               </div> <!-- pofol-info -->
             </div> <!-- flexbox -->
@@ -372,11 +373,12 @@
                 <div>04</div>
                 <div class="pofol-title">To Do List</div>
                 <div class="pofol-des">
-                  투두리스트
+                  리액트를 배우며 작업한 투두리스트입니다. useEffect, useState와 같은 Hooks를 사용했고 props를 통해 컴포넌트에 값을 전달하는 과정을 학습했습니다.  
                 </div>
                 <div class="modal-btn">
                   <button>디자인 가이드</button>
-                  <button>자세히 보기</button>
+                  <button><a href="https://github.com/song-tiigger/minumsa" target="_blank">페이지 보기</a></button>
+
                 </div>
               </div> <!-- pofol-info -->
             </div> <!-- flexbox -->
@@ -390,10 +392,13 @@
       <div class="footer-bg">
         <div class="container contact">
           <div>감사합니다! 궁금한 내용이 있다면 연락 주세요.</div>
-          <a href="mailto:applej07@naver.com">applej07@naver.com</a>
+          <a href="mailto:applej07@naver.com" class="email">applej07@naver.com</a>
+          <p>클릭하면 Outlook이 활성화됩니다.</p>
+
           <div class="git">
             <a href=""><img src="./images/git.png" alt=""></a>
           </div>
+
           <div class="topbtn">
             <a href="#">
               <img src="./images/topbtnBlue.png" alt="맨 위로 올라가는 버튼">
