--- a/index.html
+++ b/index.html
@@ -161,8 +161,85 @@
 
           <div class="container">
             <div class="skill-info">
+
+              <div class="bootstrap info-box info-box1">
+                <div class="flexbox">
+                  <div class="icon-box">
+                    <div class="img-box"><img src="./images/skill-icon/bootstrap.png" alt=""></div> 
+                    <div class="skill-name">Bootstrap
+                    </div>
+                  </div>
+                  <div class="skill-des">
+                    <div class="percentage">70%</div>
+                    부트스트랩
+                  </div>
+                </div> <!-- flexbox -->
+              </div> <!-- bootstrap -->
+
+              <div class="photoshop info-box info-box2">
+                <div class="flexbox">
+                  <div class="icon-box">
+                    <div class="img-box"><img src="./images/skill-icon/ps.png" alt=""></div> 
+                    <div class="skill-name">Photoshop</div>
+                  </div>
+                  <div class="skill-des">
+                    <div class="percentage">70%</div>
+                    <div>포토샵의 다양한 기능을 사용하여 이미지를 편집할 수 있으며, 와이어프레임 제작이 가능합니다.</div> 
+                  </div>
+                </div> <!-- flexbox -->
+              </div> <!-- photoshop -->
   
-              <div class="html info-box info-box1">
+              <div class="illustrator info-box info-box3">
+                <div class="flexbox">
+                  <div class="icon-box">
+                    <div class="img-box"><img src="./images/skill-icon/ai.png" alt=""></div> 
+                    <div class="skill-name">Illustrator</div>
+                  </div>
+                  <div class="skill-des">
+                    <div class="percentage">70%</div>
+                    펜툴 사용이 가능하고 간단한 로고와 일러스트를 제작할 수 있습니다.
+                  </div>
+                </div> <!-- flexbox -->
+              </div> <!-- illust -->
+
+              <div class="nodejs info-box info-box4">
+                <div class="flexbox">
+                  <div class="icon-box">
+                    <div class="img-box"><img src="./images/skill-icon/nodejs.png" alt=""></div> 
+                    <div class="skill-name">Node.js</div>
+                  </div>
+                  <div class="skill-des">
+                    노드
+                  </div>
+                </div> <!-- flexbox -->
+              </div> <!-- nodejs -->
+
+              <div class="git info-box info-box5">
+                <div class="flexbox">
+                  <div class="icon-box">
+                    <div class="img-box"><img src="./images/skill-icon/git.png" alt=""></div> 
+                    <div class="skill-name">Git</div>
+                  </div>
+                  <div class="skill-des">
+                    협업
+                  </div>
+                </div> <!-- flexbox -->
+              </div> <!-- git -->
+
+              <div class="react info-box info-box6">
+                <div class="flexbox">
+                  <div class="icon-box">
+                    <div  class="img-box"><img src="./images/skill-icon/react.png" alt=""></div> 
+                    <div class="skill-name">React</div>
+                  </div>
+                  <div class="skill-des">
+                    함수형 컴포넌트와 useEffect, useState와 같은 Hooks를 이해하고
+                    유지보수에 적절한 컴포넌트를 구성합니다.
+                  </div>
+                </div> <!-- flexbox -->
+              </div> <!-- react -->
+
+              <div class="html info-box info-box7">
                 <div class="flexbox">
                   <div class="icon-box">
                     <div class="img-box"><img src="./images/skill-icon/html.png" alt=""></div> 
@@ -176,7 +253,7 @@
                 </div> <!-- flexbox -->
               </div> <!-- html -->
 
-              <div class="css info-box info-box2">
+              <div class="css info-box info-box8">
                 <div class="flexbox">
                   <div class="icon-box">
                     <div class="img-box"><img src="./images/skill-icon/css.png" alt=""></div> 
@@ -190,7 +267,7 @@
                 </div> <!-- flexbox -->
               </div> <!-- css -->
   
-              <div class="sass info-box info-box3">
+              <div class="sass info-box info-box9">
                 <div class="flexbox">
                   <div class="icon-box">
                     <div class="img-box"><img src="./images/skill-icon/sass.png" alt=""></div> 
@@ -201,21 +278,20 @@
                   </div>
                 </div> <!-- flexbox -->
               </div> <!-- sass -->
-  
-              <div class="bootstrap info-box info-box4">
+
+              <div class="jquery info-box info-box10">
                 <div class="flexbox">
                   <div class="icon-box">
-                    <div class="img-box"><img src="./images/skill-icon/bootstrap.png" alt=""></div> 
-                    <div class="skill-name">Bootstrap
-                    </div>
+                    <div class="img-box"><img src="./images/skill-icon/jquery.png" alt=""></div> 
+                    <div class="skill-name">jQuery</div>
                   </div>
                   <div class="skill-des">
-                    부트스트랩
+                  스크롤 이벤트, 이미지 슬라이드, 탭메뉴를 구현할 수 있습니다.
                   </div>
                 </div> <!-- flexbox -->
-              </div> <!-- bootstrap -->
-  
-              <div class="javascript info-box info-box5">
+              </div> <!-- jquery -->
+
+              <div class="javascript info-box info-box11">
                 <div class="flexbox">
                   <div class="icon-box">
                     <div class="img-box"><img src="./images/skill-icon/js.png" alt=""></div> 
@@ -227,70 +303,23 @@
                 </div> <!-- flexbox -->
               </div> <!-- javascript -->
   
-              <div class="jquery info-box info-box6">
-                <div class="flexbox">
-                  <div class="icon-box">
-                    <div class="img-box"><img src="./images/skill-icon/jquery.png" alt=""></div> 
-                    <div class="skill-name">jQuery</div>
-                  </div>
-                  <div class="skill-des">
-                  스크롤 이벤트, 이미지 슬라이드, 탭메뉴를 구현할 수 있습니다.
-                  </div>
-                </div> <!-- flexbox -->
-              </div> <!-- jquery -->
-  
-              <div class="react info-box info-box7">
-                <div class="flexbox">
-                  <div class="icon-box">
-                    <div  class="img-box"><img src="./images/skill-icon/react.png" alt=""></div> 
-                    <div class="skill-name">React</div>
-                  </div>
-                  <div class="skill-des">
-                    함수형 컴포넌트와 useEffect, useState와 같은 Hooks를 이해하고
-                    유지보수에 적절한 컴포넌트를 구성합니다.
-                  </div>
-                </div> <!-- flexbox -->
-              </div> <!-- react -->
-  
-              <div class="photoshop info-box info-box8">
-                <div class="flexbox">
-                  <div class="icon-box">
-                    <div class="img-box"><img src="./images/skill-icon/ps.png" alt=""></div> 
-                    <div class="skill-name">Photoshop</div>
-                  </div>
-                  <div class="skill-des">
-                    포토샵의 다양한 기능을 사용하여 이미지를 편집할 수 있으며, 와이어프레임 제작이 가능합니다.
-                  </div>
-                </div> <!-- flexbox -->
-              </div> <!-- photoshop -->
-  
-              <div class="illustrator info-box info-box9">
-                <div class="flexbox">
-                  <div class="icon-box">
-                    <div class="img-box"><img src="./images/skill-icon/ai.png" alt=""></div> 
-                    <div class="skill-name">Illustrator</div>
-                  </div>
-                  <div class="skill-des">
-                    펜툴 사용이 가능하고 간단한 로고와 일러스트를 제작할 수 있습니다.
-                  </div>
-                </div> <!-- flexbox -->
-              </div> <!-- illust -->
-  
             </div> <!-- skill-info -->
           </div> <!-- container -->
         </div> <!-- skill-bg -->
 
         <div class="container">
           <div class="skill-circle desktop-only">
+            <div class="circle cir-bootstrap">B</div>
+            <div class="circle cir-photoshop">Ps</div>
+            <div class="circle cir-illust">Ai</div>
+            <div class="circle cir-nodejs">Node.js</div>
+            <div class="circle cir-git">Git</div>
+            <div class="circle cir-react">React</div>
             <div class="circle cir-html">Html</div>
             <div class="circle cir-css">Css</div>
             <div class="circle cir-sass">Sass</div>
-            <div class="circle cir-bootstrap">B</div>
-            <div class="circle cir-javascript">Js</div>
             <div class="circle cir-jquery">jQuery</div>
-            <div class="circle cir-react">React</div>
-            <div class="circle cir-photoshop">Ps</div>
-            <div class="circle cir-illust">Ai</div>
+            <div class="circle cir-javascript">Js</div>
           </div>
         </div> 
 
@@ -350,7 +379,7 @@
               </div>
               <div class="pofol-info">
                 <div>03</div>
-                <div class="pofol-title">카페 키오스크</div>
+                <div class="pofol-title">프로필 포트폴리오</div>
                 <div class="pofol-des">
                   카페의 무인 계산대를 재현해보았습니다.
                   메뉴 추가, 수량 확인, 현금 지불 및 거스름돈 계산이 가능합니다.
@@ -358,11 +387,10 @@
                 <div class="modal-btn">
                   <button>디자인 가이드</button>
                   <button><a href="https://github.com/song-tiigger/minumsa" target="_blank">페이지 보기</a></button>
-
                 </div>
               </div> <!-- pofol-info -->
             </div> <!-- flexbox -->
-          </div> <!-- pofol-box1 -->
+          </div> <!-- pofol-box3 -->
 
           <div class="pofol-box pofol-box4 right">
             <div class="flexbox">
@@ -371,6 +399,45 @@
               </div>
               <div class="pofol-info">
                 <div>04</div>
+                <div class="pofol-title">거스름돈 계산</div>
+                <div class="pofol-des">
+                  메뉴 추가, 현금 지불, 거스름돈 계산이 가능합니다 
+                </div>
+                <div class="modal-btn">
+                  <button>디자인 가이드</button>
+                  <button><a href="https://github.com/song-tiigger/minumsa" target="_blank">페이지 보기</a></button>
+                </div>
+              </div> <!-- pofol-info -->
+            </div> <!-- flexbox -->
+          </div> <!-- pofol-box4 -->
+
+          <div class="pofol-box pofol-box5 left">
+            <div class="flexbox">
+              <div class="pofol-thumbnail">
+                <img src="images/grass.png" alt="aaaaaaaaaaaa이미지변경하기aaaaaaaaaaaaaaaaa">
+              </div>
+              <div class="pofol-info">
+                <div>05</div>
+                <div class="pofol-title">카페 키오스크</div>
+                <div class="pofol-des">
+                  카페의 무인 계산대를 재현해보았습니다.
+                  메뉴 추가, 수량 확인, 현금 지불 및 거스름돈 계산이 가능합니다.
+                </div>
+                <div class="modal-btn">
+                  <button>디자인 가이드</button>
+                  <button><a href="https://github.com/song-tiigger/minumsa" target="_blank">페이지 보기</a></button>
+                </div>
+              </div> <!-- pofol-info -->
+            </div> <!-- flexbox -->
+          </div> <!-- pofol-box5 -->
+    
+          <div class="pofol-box pofol-box6 right">
+            <div class="flexbox">
+              <div class="pofol-thumbnail">
+                <img src="images/grass.png" alt="aaaaaaaaaaaa이미지변경하기aaaaaaaaaaaaaaaaa">
+              </div>
+              <div class="pofol-info">
+                <div>06</div>
                 <div class="pofol-title">To Do List</div>
                 <div class="pofol-des">
                   리액트를 배우며 작업한 투두리스트입니다. useEffect, useState와 같은 Hooks를 사용했고 props를 통해 컴포넌트에 값을 전달하는 과정을 학습했습니다.  
@@ -378,11 +445,10 @@
                 <div class="modal-btn">
                   <button>디자인 가이드</button>
                   <button><a href="https://github.com/song-tiigger/minumsa" target="_blank">페이지 보기</a></button>
-
                 </div>
               </div> <!-- pofol-info -->
             </div> <!-- flexbox -->
-          </div> <!-- pofol-box1 -->
+          </div> <!-- pofol-box6 -->
 
         </div> <!-- container -->
       </section> <!-- portfolio -->
