--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </header> <!-- header -->
 
     <main>
-      <section id="about" class="hideme">
+      <section id="about">
         <h3>ABOUT</h3>
         <div class="container">
           <div class="about-me">
@@ -103,8 +103,8 @@
                   010-5113-5826 <br>
                   applej07@naver.com
                 </div>
-              </div>
-
+              </div> 
+  
               <div class="me-introduce">
                 <div>안녕하세요, <strong>웹 개발자 송하정</strong>입니다.</div>
                 <br>
@@ -146,7 +146,7 @@
       </section> <!-- about -->
 
 
-      <section id="skill" class="hideme">
+      <section id="skill">
         <h3>SKILL</h3>
         <div class="skill-bg">
           <div class="grass">
@@ -326,7 +326,7 @@
       </section> <!-- skill -->
 
 
-      <section id="portfolio" class="hideme">
+      <section id="portfolio">
         <h3>PORTFOLIO</h3>
         <div class="container">
 
